# property-intel

./: .env.template  .gitignore  Makefile  README.md  compose.pg.yml  module.yaml  pyproject.toml
deploy/systemd/: jarvis-mod-property-intel.service
docs/: DATA-PRODUCT.md  architecture.md  transaction-dates-and-eu-sources.md
examples/: 01_top_yield_areas.sql  02_supply_shortfall_regions.sql  03_mortgage_affordability_index.sql  04_dom_deterioration.sql  05_listing_cashflow_screener.sql  README.md
scripts/: backfill_listing_details.py  backfill_missing_postal_via_detail.py  backfill_statfi_history.py  backup-bq.sh  backup-db.sh  export_product_bundle.py  fetch_bof_loans.py  fetch_flood_risk.py  fetch_interest_rates.py  fetch_paavo_attributes.py  fetch_statfi_construction.py  fetch_statfi_migration.py  fetch_statfi_rents.py  fetch_transit_score.py  hourly_pipeline.py  restore-from-v1.sh  seed_municipality_region.py  seed_postal_areas.py
sql/: alembic.ini
sql/marts/: gold_views.sql
sql/migrations/: env.py
sql/migrations/sql/: 003_postal_code_area.sql  009_analytical_views.sql  012_postal_demographics.sql  014_mortgage_market.sql  016_postal_flood_risk.sql  (+1 more)
src/jarvis_property_intel/: config.py  db.py  main.py  models.py  schemas.py
tests/: conftest.py
tests/integration/: smoke_e2e.py  test_integration.py  test_postal_code_lookup.py
tests/unit/: test_bof_loans.py  test_gtfs_transit.py  test_health.py  test_hintatiedot_connector.py  test_mml_pipeline.py  test_oikotie_connector.py  test_paavo_attributes.py  test_syke_flood_connector.py
(+72 files in other folders)
