[project]
name = "jarvis-property-intel"
version = "0.1.0"
description = "JARVIS v2 property intelligence module — Finnish real-estate data"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "swissdog" }]
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "geoalchemy2>=0.15",
    "python-dotenv>=1.0",
    "jarvis-module-sdk[fastapi]",
]

[project.optional-dependencies]
scoring = [
    "scikit-learn",
    "xgboost",
    "lightgbm",
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.9",
]
dev = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_property_intel"]

[tool.uv.sources]
jarvis-module-sdk = { path = "../JARVIS/services/_sdk", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
